Round 4 additions on the F1 consolidation: every leading BOM, Follow mid-character, one control-event predicate
On top of 80e5ab8a (AuditText), from the reviewer's parallel fix:

- F3 completed: AuditText.strip removed ONE leading BOM while both framers already
  loop, so a double BOM (cat bom-only.yaml run.yaml) still hid the record key
  (false NO_RECORD_KEY) and a '#' header behind it. Now every leading mark.
- F2: Follow decoded with Files.readString, which throws MalformedInputException
  when a poll lands inside a multi-byte character (a split BOM or any non-ASCII
  text) - 'Follow read failed' for that tick. appendFrom now decodes only complete
  UTF-8 characters and leaves the rest pending; malformed bytes elsewhere still throw.
- F4: ONLY_CONTROL_EVENTS matched with contains() while MA-8 matched the simple name
  exactly, so FakeEventLogControlEventX counted for one and not the other. One
  predicate, ProducerDiagnostics.isControlEvent, which MA-8 delegates to. And
  PerNodeLevelChanges.all() no longer claims to feed the context echo and report.
- YamlAuditReader's blank sniff goes through AuditText (made public for that one
  helper), and a structural test fails if a BOM literal or byte test appears
  outside AuditText and ByteRecordFramer.

Witnesses, each failing at its named test with sources restored byte-identical:
one-BOM strip, readString in follow, contains predicate, a stray BOM site, the
reader's own BOM rule. Full suite 1934/0/62.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>